fix to col-md-12 as a child of container. line 54

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="http://weloveiconfonts.com/api/?family=zocial">
-  <script src="js/jquery-3.2.0.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
+  <script src="js/jquery-3.2.0.min.js" async></script>
+  <script src="js/bootstrap.min.js" async></script>
 </head>
 
 <body>
@@ -46,14 +46,19 @@
         </div>
         <div class="col-md-6 text-right">
           <h3 class="text-center text-uppercase">Me in 10 seconds</h3>
-          <p class="bio">I am a very proud father. I love my son! Every Wednesday is Saxo and Dado day so please don't expect a reply until Thursday. I'm most likely in a sugar coma and having a great time. I'm fascinated with the usable psychology of self-improvement, Stoicism, and philosophy. I am a minimalist, solitary socialite, and I love coffee. A California native who loves surfing, hiking, and running with my dog. Deeply happy and anti-drama. My favorite book is Meditations by Marcus Aurelius. You can check it out <a href="https://www.amazon.com/Emperor-Rome-Marcus-Aurelius-Meditations/dp/B01FOD7CRG/ref=sr_1_5?ie=UTF8&qid=1492100802&sr=8-5&keywords=meditations+marcus" target="_blank"> Here.</a></p>
+          <p class="bio">I am a very proud father, I love my son! Every Wednesday is Saxo and Dado day so please don't expect a reply until Thursday. I'm most likely in a sugar coma and having a great time. I'm fascinated with the usable psychology of self-improvement, Stoicism, and philosophy. I am a minimalist, solitary socialite, and I love coffee. A California native who loves surfing, hiking, and running with my dog. Deeply happy and anti-drama. My favorite book is Meditations by Marcus Aurelius. You can check it out <a href="https://www.amazon.com/Emperor-Rome-Marcus-Aurelius-Meditations/dp/B01FOD7CRG/ref=sr_1_5?ie=UTF8&qid=1492100802&sr=8-5&keywords=meditations+marcus" target="_blank"> Here.</a></p>
         </div>
       </article>
     </div>
 
-    <div class="col-md-12">
-      <h2 class="text-muted">Featured Work</h2>
+    <div class="container-fluid">
+      <aside class="row">
+        <div class="col-md-12">
+          <h2 class="text-muted">Featured Work</h2>
+        </div>
+      </aside>
     </div>
+
 
     <div class="container-fluid">
       <main class="row text-center">
@@ -63,7 +68,7 @@
             <figcaption>Click on image to read more</figcaption>
           </figure>
           <h3 class="text-uppercase">Front-End</h3>
-          <p><a href="https://github.com/stoicbum/Movie_Trailer_Website" target="_blank">link to project</a></p>
+          <p><a href="https://github.com/stoicbum/Portfolio_Project" target="_blank">link to project</a></p>
         </div>
         <div class="col-md-4">
           <figure>
@@ -93,7 +98,7 @@
     </div>
     <footer class="row">
       <div class="col-xs-12 text-center">
-        <div id="social">
+        <div class="social">
           <a href="https://twitter.com/jason_derr" target="_blank" class="zocial-twitter"> Twitter</a>
           <a href="https://www.facebook.com/sharer/sharer.php?u=https://github.com/udacity/responsive-images" target="_blank" class="zocial-facebook" > Facebook</a>
           <a href="https://plus.google.com/109417711220822823797" class="zocial-googleplus" > Google+</a>
@@ -110,7 +115,7 @@
           </div>
           <div class="modal-body">
             <img class="img-responsive" src="images/ilya-pavlov-87438(1)-1600_large_2x.jpg" srcset="images/ilya-pavlov-87438(1)-1600_large_2x.jpg 2x, images/ilya-pavlov-87438(1)-500_small_1x.jpg 1x" alt="code on a screen">
-              Here I wrote server-side code to store a list of my favorite movies, including box art imagery and a movie trailer URL. I then served this data as a web page allowing visitors to review their movies and watch the trailers.
+              Here I wrote the code for this website. I used a bootstrap framework, custom css, and created a work load using grunt. This is a responsive website that will display images and content across multiple platforms.
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
