--- a/index.html
+++ b/index.html
@@ -1,4 +1,105 @@
 ---
 layout: default
 ---
+  <div class="container-fluid">
+    <div class="full-hero hero-home">
+      <div class="hero-content">
+        <h1>Full-Stack Ninja</h1>
+      </div>
+    </div>
+    <div class="home-callout">
+      <h1 class="callout-title">Me in 30 Seconds</h1>
+      <div class="callout-copy">
+      <p>
+      I am a very proud father who loves his son! Every Saturday is Saxo and Dado day so please don't get upset if I ignore your email and decline your phone call. I'm most likely in a sugar coma and playing Skylanders with my son. I am a single father who worked a full time job while also learning to become a Web Developer. I am very driven and goal oreinted. I'm fascinated with the usable psychology of self-improvement, Stoicism, and philosophy. A California native who loves surfing, hiking, and running with my dog. If you like to know more about me check me out <a href="/about" target="_blank"> Here.</a></p>
+      </p>
+      </div>
+    </div>
+    <aside class="row">
+      <div class="col-md-12">
+        <h2 class="text-muted">Featured Work</h2>
+      </div>
+    </aside>
+    <main class="row text-center">
+      <div class="col-md-4">
+        <figure>
+          <img class="img-responsive" src="images/ilya-pavlov-87438(1)-1600_large_2x.jpg" srcset="images/ilya-pavlov-87438(1)-1600_large_2x.jpg 2x, images/ilya-pavlov-87438(1)-500_small_1x.jpg 1x" alt="code on a screen" data-toggle="modal" data-target="#front-end">
+          <figcaption>Click on image to read more</figcaption>
+        </figure>
+        <h3 class="text-uppercase">Front-End</h3>
+        <p><a href="https://github.com/stoicbum/udacity_portfolio_project" target="_blank">link to projects</a></p>
+      </div>
+      <div class="col-md-4">
+        <figure>
+          <img class="img-responsive" src="images/artem-sapegin-199614-1600_large_2x.jpg" srcset="images/artem-sapegin-199614-1600_large_2x.jpg 2x, images/artem-sapegin-199614-500_small_1x.jpg 1x" alt="a cup of coffee next to a laptop" data-toggle="modal" data-target="#back-end">
+          <figcaption>Click on image to read more</figcaption>
+        </figure>
+        <h3 class="text-uppercase">Back-End</h3>
+        <p><a href="https://github.com/stoicbum/Tournament_results" target="_blank">link to projects</a></p>
+      </div>
+      <div class="col-md-4">
+        <figure>
+          <img class="img-responsive" src="images/carl-heyerdahl-181868-1600_large_2x.jpg" srcset="images/carl-heyerdahl-181868-1600_large_2x.jpg 2x, images/carl-heyerdahl-181868-500_small_1x.jpg 1x" alt="apple computer that reads do more" data-toggle="modal" data-target="#code">
+          <figcaption>Click on image to read more</figcaption>
+        </figure>
+        <h3 class="text-uppercase">Fun-Code</h3>
+        <p><a href="https://github.com/stoicbum/fill_in_the_blanks" target="_blank">link to projects</a></p>
+      </div>
+      </main>
+      <footer class="row">
+        <div class="col-md-12">
+          <hr>
+        </div>
+      </footer>
 
+    <!-- Front-End Modal -->
+    <div class="modal fade" id="front-end" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 class="modal-title" id="front-endLabel">Front-End Code</h4>
+          </div>
+          <div class="modal-body">
+            <img class="img-responsive" src="images/ilya-pavlov-87438(1)-1600_large_2x.jpg" srcset="images/ilya-pavlov-87438(1)-1600_large_2x.jpg 2x, images/ilya-pavlov-87438(1)-500_small_1x.jpg 1x" alt="code on a screen">
+              Below is a link to my Front-End projects. They include a local weather page, a workable drum Kit, whack-a-mole game, tic tac toe game.
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Back-End Modal -->
+    <div class="modal fade" id="back-end" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 class="modal-title" id="back-endLabel">Back-End Code</h4>
+          </div>
+          <div class="modal-body">
+            <img class="img-responsive" src="images/artem-sapegin-199614-1600_large_2x.jpg" srcset="images/artem-sapegin-199614-1600_large_2x.jpg 2x, images/artem-sapegin-199614-500_small_1x.jpg 1x" alt="a cup of coffee next to a laptop">
+              Here are three Back-End projects. First, I wrote a database backed application that determines the winner of a swiss-system tournament. Also an internal reporting tool for a newspaper site to discover what articles and authors are the most popular. And on what days had the most 404 errors.
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Code Modal -->
+    <div class="modal fade" id="code" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 class="modal-title" id="codeLabel">Fun-Code</h4>
+          </div>
+          <div class="modal-body">
+            <img class="img-responsive" src="images/carl-heyerdahl-181868-1600_large_2x.jpg" srcset="images/carl-heyerdahl-181868-1600_large_2x.jpg 2x, images/carl-heyerdahl-181868-500_small_1x.jpg 1x" alt="apple computer that reads do more">
+              Fun Code? All code is fun code!! Here are a few games I made, A speech recorder in over 30 different languages. Fancy clock. And much more. Check it out.
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
