--- a/saxalocity/index.html
+++ b/saxalocity/index.html
@@ -1,4 +1,26 @@
 ---
 layout: default
 ---
-im a 4 gal
+<div class="gallery col-three">
+  <div class="col col-nav gallery-thumbs" id="gallery-thumbs">
+    <div class="current">
+       <img src="/images/poster.jpg" alt="Image title 1">
+    </div>
+    <div>
+        <img src="/images/poster.jpg" alt="Image title 2">
+    </div>
+  </div>
+  <div class="col col-content">
+    <div class="gallery-photo" id="gallery-photo">
+    <video controls
+    class="player" poster="/images/poster.jpg"
+    width="550" height="340"
+    src="/videos/sax.mp4" type="video/mp4">
+    </video>
+    </div>
+  </div>
+  <div class="col col-aside gallery-info" id="gallery-info">
+    <h3>Video Title 1</h3>
+    <p>Video Description 1</p>
+  </div>
+</div>
