blog layout started, saxalocity only needs javascript

--- a/saxalocity/index.html
+++ b/saxalocity/index.html
@@ -15,7 +15,7 @@ layout: default
     <video controls
     class="player" poster="/images/poster.jpg"
     width="550" height="340"
-    src="/videos/sax.mp4" type="video/mp4">
+    src="#" type="video/mp4">
     </video>
     </div>
   </div>
