--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
     <div class="home-callout">
       <h1 class="callout-title">Me in 30 Seconds</h1>
       <div class="callout-copy">
-      <p>
+      <p class="home-p">
       I am a very proud father who loves his son! Every Saturday is Saxo and Dado day so please don't get upset if I ignore your email and decline your phone call. I'm most likely in a sugar coma and playing Skylanders with my son. I am a single father who worked a full time job while also learning to become a Web Developer. I am very driven and goal oreinted. I'm fascinated with the usable psychology of self-improvement, Stoicism, and philosophy. A California native who loves surfing, hiking, and running with my dog. If you like to know more about me check me out <a href="/about" target="_blank"> Here.</a></p>
       </p>
       </div>
@@ -27,7 +27,7 @@ layout: default
           <figcaption>Click on image to read more</figcaption>
         </figure>
         <h3 class="text-uppercase">Front-End</h3>
-        <p><a href="https://github.com/stoicbum/udacity_portfolio_project" target="_blank">link to projects</a></p>
+        <p class="home-p"><a href="https://github.com/stoicbum/udacity_portfolio_project" target="_blank">link to projects</a></p>
       </div>
       <div class="col-md-4">
         <figure>
@@ -35,7 +35,7 @@ layout: default
           <figcaption>Click on image to read more</figcaption>
         </figure>
         <h3 class="text-uppercase">Back-End</h3>
-        <p><a href="https://github.com/stoicbum/Tournament_results" target="_blank">link to projects</a></p>
+        <p class="home-p"><a href="https://github.com/stoicbum/Tournament_results" target="_blank">link to projects</a></p>
       </div>
       <div class="col-md-4">
         <figure>
@@ -43,7 +43,7 @@ layout: default
           <figcaption>Click on image to read more</figcaption>
         </figure>
         <h3 class="text-uppercase">Fun-Code</h3>
-        <p><a href="https://github.com/stoicbum/fill_in_the_blanks" target="_blank">link to projects</a></p>
+        <p class="home-p"><a href="https://github.com/stoicbum/fill_in_the_blanks" target="_blank">link to projects</a></p>
       </div>
       </main>
 
