--- a/saxalocity/index.html
+++ b/saxalocity/index.html
@@ -12,11 +12,7 @@ layout: default
   </div>
   <div class="col col-content">
     <div class="gallery-photo" id="gallery-photo">
-    <video controls
-    class="player" poster="/images/poster.jpg"
-    width="550" height="340"
-    src="#" type="video/mp4">
-    </video>
+    <iframe class= "player"width="560" height="315" src="https://www.youtube.com/embed/983-qer6Mng" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
   </div>
   <div class="col col-aside gallery-info" id="gallery-info">
