now page finished, blog post padding fixed

--- a/now/index.html
+++ b/now/index.html
@@ -1,9 +1,34 @@
 ---
 layout: default
 ---
-<div class="now">
+<div class="container-fluid now">
     <div class="doing-now">
-        <h3>What I'm doing now</h3>
+        <h1 class="now">What I'm doing now</h1>
     </div>
-    <p>I'm home in Southern California.</p>
-</div>
+     <p> This is my now page, from the <a href="https://sivers.org/nowff" target="_blank">now page movement</a> by <a href="https://sivers.org/" target="_blank">Derek Sivers.</a> It's a page with information about what I'm up to now.</p>
+    <p>Home is Southern California.</p>
+    <br>
+    <h2 class="now">Code:</h2>
+    <ul>
+        <li>Currently learning <a href="https://reactjs.org/" target="_blank">React</a></li>
+        <li>I'm also learning <a href="https://nodejs.org/en/about/" target="_blank">Node</a></li>
+        <li>Learning TDD. Mocha for Javascript and pytest for Python.</li>
+        <p></p>
+    </ul>
+    <br>
+    <h2 class="now">Life:</h2>
+    <p>As always, all my attention goes to my son 5 days a week(the other two days he's with his mom). We do whatever he feels like doing. Right now that is learning to swim, having nerf wars, playing video games and making videos for <a href="/saxalocity" target="_blank">Saxalocity.</a> I also make up math lessons and have him write book reports once a week to prepare for the 2nd grade.</p>
+    <p> When it's about me, I like to work out using the <a href="https://www.strongfirst.com/achieve/sinister/" target="_blank">Simple and Sinster</a> method from <a href="https://en.wikipedia.org/wiki/Pavel_Tsatsouline" target="_blank">Pavel Tsatsouline.</a> I also enjoy surfing <a href="https://www.surfline.com/surf-report/hb-pier-northside/5842041f4e65fad6a7708827" target="_blank"> Huntington Beach </a> early Saturday mornings and playing God of War 4.  </p>
+    <br>
+    <h2 class="now">Improvement:</h2>
+    <p>This section is for self-improvment. Things that currently need some attention.</p>
+    <ul>
+        <li>Getting off my phone:</li>
+        <p>I waste too much time on my phone and that needs to stop.</p>
+        <li>Sugar coated lies:</li>
+        <p>Salted Carmel Ice-Cream (enough said).</p>
+        <li>Over-Caffeinated:</li>
+        <p>I'm neighbors with a starbucks, it's become a problem.</p>
+    </ul>
+    <br>
+    <p>This was updated on June 22, 2018.</p>
