--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
   <div class="container-fluid">
     <div class="full-hero hero-home">
       <div class="hero-content">
-        <h1>Full-Stack Ninja</h1>
+        <h1> “If a man knows not which port he sails, no wind is favorable.”</h1>
       </div>
     </div>
     <div class="home-callout">
