--- a/saxalocity/index.html
+++ b/saxalocity/index.html
@@ -4,7 +4,10 @@ layout: default
 <div class="gallery col-three">
   <div class="col col-nav gallery-thumbs" id="gallery-thumbs">
     <div class="current">
-       <img src="/images/poster.jpg" alt="Image title 1">
+       <img src="/images/poster.jpg" alt="Image title 1"
+       data-large-version="/images/poster.jpg"
+       data-title="saxalocity trailer"
+       data-description = "A sneak peak at saxalocity">
     </div>
     <div>
         <img src="/images/poster.jpg" alt="Image title 2">
@@ -12,7 +15,7 @@ layout: default
   </div>
   <div class="col col-content">
     <div class="gallery-photo" id="gallery-photo">
-    <iframe class= "player"width="560" height="315" src="https://www.youtube.com/embed/983-qer6Mng" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    <iframe class= "player"width="560" height="315" src="https://www.youtube.com/embed/983-qer6Mng" frameborder="0" poster="" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
   </div>
   <div class="col col-aside gallery-info" id="gallery-info">
@@ -20,3 +23,4 @@ layout: default
     <p>Video Description 1</p>
   </div>
 </div>
+<script src="/js/saxalocity.js"></script>
