home, about, and now pages have media queries

--- a/now/index.html
+++ b/now/index.html
@@ -12,7 +12,7 @@ layout: default
     <ul>
         <li>Currently learning <a href="https://reactjs.org/" target="_blank">React</a></li>
         <li>I'm also learning <a href="https://nodejs.org/en/about/" target="_blank">Node</a></li>
-        <li>Learning TDD. Mocha for Javascript and pytest for Python.</li>
+        <li>TDD. Mocha for Javascript and pytest for Python.</li>
         <p></p>
     </ul>
     <br>
