--- a/saxalocity/index.html
+++ b/saxalocity/index.html
@@ -12,23 +12,23 @@ layout: default
         <div class="current">
             <img src="/images/poster.jpg" alt="Image title 1"
                 data-large-version = "https://www.youtube.com/embed/983-qer6Mng"
-                data-title= "saxalocity trailer"
-                data-description = "A sneak peak at saxalocity">
+                data-title= "Saxalocity Trailer"
+                data-description = "Get ready for Saxalocity! coming summer 2018">
         </div>
         <div class>
             <img src="/images/poster.jpg" alt="Image title 2"
                 data-large-version="https://www.youtube.com/embed/983-qer6Mng"
-                data-title ="saxalocity episode 1."
+                data-title ="Saxalocity ep. 1"
                 data-description = "In this episode Sax has fun with slow-mo. hold on to your butts!!">
         </div>
     </div>
     <div class="col col-content">
         <div class="gallery-video" id="gallery-video">
-            <iframe class= "player"width="560" height="315" src="https://www.youtube.com/embed/983-qer6Mng" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe class= "player" width="560" height="315" src="https://www.youtube.com/embed/983-qer6Mng" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
     </div>
     <div class="col col-aside gallery-info" id="gallery-info">
         <h3 class="title">Saxalocity Trailer</h3>
-        <p class="description">Get ready for Saxalocity! coming this summer</p>
+        <p class="description">Get ready for Saxalocity! coming summer 2018</p>
     </div>
 </div>
