--- a/about/index.html
+++ b/about/index.html
@@ -1,3 +1,120 @@
 ---
 layout: default
 ---
+<section class="section is-medium is-primary has-text-centered is-long">
+    <div class = "container">
+        <div class="columns is-centered">
+            <div class="column is-three-fifths">
+                <h2 class="about-subtitle">Since beginning my journey as a web-developer nearly 3 years ago, I have gained a serious passsion for web-development. As a web developer, I find my obsessive attention to constantly getting better has served me well. I'm quietly confident, naturally curious, and perpetually improving my chops. </h2>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="section skills has-text-centered">
+    <div class="container is-narrow">
+        <div class="box">
+            <div class="content">
+                <div class="columns is-centered">
+                    <div class="column">
+                        <span class="about-social" style="font-size: 3em"><i class="fab fa-html5"></i></span>
+                        <h1 class="title-skills">Front-End Developer</h1>
+                        <p>
+                            That feeling of excitment when you bring an idea to life in the browser never gets old.
+                        </p>
+                        <p class="title-skills">Front-End Languages:</p>
+                        <p>HTML, CSS, JavaScript, Sass,</p>
+                        <p class= "title-skills">Front-End Tool Belt:</p>
+                        <ul>
+                            <li class="skills-list">
+                                Sublime Text
+                            </li>
+                            <li class="skills-list">
+                                Bootstrap
+                            </li>
+                            <li class="skills-list">
+                                Git
+                            </li>
+                            <li class="skills-list">
+                                Command Line
+                            </li>
+                            <li class="skills-list">
+                                Jekyll
+                            </li>
+                            <li class="skills-list">
+                                jQuery
+                            </li>
+                            <li class="skills-list">
+                                Grunt
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="column">
+                        <span class="about-social" style="font-size: 3em"><i class="fab fa-python"></i></span>
+                        <h1 class="title-skills">Back-End Developer</h1>
+                        <p>
+                         The development of server-side logic and maintaining a database is what first drew me to web development.
+                        </p>
+                        <p class="title-skills">Back-End Languages: </p>
+                        <p>Python, MySql, PostgreSQL, MongoDB </p>
+                        <p class="title-skills">Back-End Tool Belt: </p>
+                        <ul>
+                            <li class="skills-list">
+                                RESTful API
+                            </li>
+                            <li class="skills-list">
+                                Command Line
+                            </li>
+                            <li class="skills-list">
+                                Ubuntu
+                            </li>
+                            <li class="skills-list">
+                                AWS
+                            </li>
+                            <li class="skills-list">
+                                Flask
+                            </li>
+                            <li class="skills-list">
+                                vagrant
+                            </li>
+                            <li class="skills-list">
+                                Git
+                            </li>
+                            <li class="skills-list">
+                                oAuth2
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="column">
+                        <span class="about-social" style="font-size: 3em"><i class="fas fa-book-open"></i></span>
+                        <h1 class="title-skills">Student</h1>
+                        <p>
+                            I want to be the best developer I can be. Get 1% better everyday. I will never be satasified with what I know.
+                        </p>
+                        <p class="title-skills">Knowledge:</p>
+                        <p>Classes, Books, Videos, </p>
+                        <p class="title-skills">Knowledge Tools:</p>
+                        <ul>
+                            <li class="skills-list">
+                                Udacity Nanodegrees
+                            </li>
+                            <li class="skills-list">
+                                FreeCodeCamp
+                            </li>
+                            <li class="skills-list">
+                                Meetups
+                            </li>
+                            <li class="skills-list">
+                                Learn Enough To Be Dangrous
+                            </li>
+                            <li class="skills-list">
+                                online courses (Wes Bos)
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
