--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@ layout: default
   <div class="container-fluid">
     <div class="full-hero hero-home">
       <div class="hero-content">
-        <h1> “If a man knows not which port he sails, no wind is favorable.”</h1>
+        <h1> Full-Stack Developer</h1>
       </div>
     </div>
-    <div class="home-callout">
+    <div class="col-md-12 home-callout">
       <h1 class="callout-title">Me in 30 Seconds</h1>
-      <div class="callout-copy">
-      <p class="home-p">
-      I am a very proud father who loves his son! Every Saturday is Saxo and Dado day so please don't get upset if I ignore your email and decline your phone call. I'm most likely in a sugar coma and playing Skylanders with my son. I am a single father who worked a full time job while also learning to become a Web Developer. I am very driven and goal oreinted. I'm fascinated with the usable psychology of self-improvement, Stoicism, and philosophy. A California native who loves surfing, hiking, and running with my dog. If you like to know more about me check me out <a href="/about" target="_blank"> Here.</a></p>
+      <div class="col-md-12 callout-copy">
+      <p class="home-p">Honestly, I only need 10 seconds because my son is the most important thing in my life and that will forever be the case. Every Sunday is "Saxo & Dado day", which means I'm probably sunburnt, hopped up on sugar, and getting shot at with a nerf gun. I am a single father who is fascinated with the usable psychology of self-improvement, Stoicism, and Philosophy. A California native who loves surfing, hiking, and running with my dog. If you would like to know more about my story as a developer, check me out <a href="/about"> Here.</a></p>
       </p>
       </div>
     </div>
